#1009 create list promotion page